[package]
name = "discord-cli"
version = "0.1.0"
authors = ["Noskcaj <kcajdev@gmail.com>"]
edition = "2018"

[dependencies]
parking_lot = "0.9.0"

[dependencies.serenity]
git = "https://github.com/terminal-discord/serenity"
branch = "current"
default_features = false
features = [
    "client",
    "cache",
    "builder",
    "gateway",
    "model",
    "utils",
    "rustls_backend",
]
